crates/jolt_kotlin_syntax/tests/snapshots/corpus__trivia__string_templates.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
package com.example.trivia

fun templates(user: String, count: Int): String {
    val simple = "Hello, ${ /* JOLT-TRIVIA:template-name */ user }"
    val nested = "Total: ${ /* JOLT-TRIVIA:template-open */ count + 1 /* JOLT-TRIVIA:template-expression */ }"
    return "$simple; $nested"
}

syntax:
syntax:
KotlinFile
  AnnotationList
  PackageHeader
    PackageKw "package" @ 0..7 trailing=[Whitespace " "]
    QualifiedName
      QualifiedNameSegmentList
        Name
          Identifier "com" @ 8..11
        Dot "." @ 11..12
        Name
          Identifier "example" @ 12..19
        Dot "." @ 19..20
        Name
          Identifier "trivia" @ 20..26
    TerminatorList
  ImportDirectiveList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 28..31 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      ModifierList
      CallableName
        CallableNamePartList
          Name
            Identifier "templates" @ 32..41
      ValueParameterList
        LParen "(" @ 41..42
        ValueParameterSeparatedList
          ValueParameter
            ModifierList
            Name
              Identifier "user" @ 42..46
            Colon ":" @ 46..47 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  Identifier "String" @ 48..54
          Comma "," @ 54..55 trailing=[Whitespace " "]
          ValueParameter
            ModifierList
            Name
              Identifier "count" @ 56..61
            Colon ":" @ 61..62 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  Identifier "Int" @ 63..66
        RParen ")" @ 66..67
      Colon ":" @ 67..68 trailing=[Whitespace " "]
      TypeReference
        UserType
          UserTypeSegmentList
            Identifier "String" @ 69..75 trailing=[Whitespace " "]
      Block
        LBrace "{" @ 76..77
        BlockItemList
          PropertyDeclaration
            ModifierList
            ModifierList
            ValKw "val" @ 82..85 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
            CallableName
              CallableNamePartList
                Name
                  Identifier "simple" @ 86..92 trailing=[Whitespace " "]
            Assign "=" @ 93..94 trailing=[Whitespace " "]
            StringTemplateExpression
              StringTemplateEntryList
                StringTemplateEntry
                  OpenQuote "\"" @ 95..96
                StringTemplateEntry
                  RegularStringPart "Hello, " @ 96..103
                StringTemplateEntry
                  LongStringTemplateEntry
                    LongTemplateEntryStart "${" @ 103..105 trailing=[Whitespace " ", BlockComment "/* JOLT-TRIVIA:template-name */", Whitespace " "]
                    NameExpression
                      Identifier "user" @ 138..142 trailing=[Whitespace " "]
                    LongTemplateEntryEnd "}" @ 143..144
              ClosingQuote "\"" @ 144..145
            PropertyBodyMemberList
          PropertyDeclaration
            ModifierList
            ModifierList
            ValKw "val" @ 150..153 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
            CallableName
              CallableNamePartList
                Name
                  Identifier "nested" @ 154..160 trailing=[Whitespace " "]
            Assign "=" @ 161..162 trailing=[Whitespace " "]
            StringTemplateExpression
              StringTemplateEntryList
                StringTemplateEntry
                  OpenQuote "\"" @ 163..164
                StringTemplateEntry
                  RegularStringPart "Total: " @ 164..171
                StringTemplateEntry
                  LongStringTemplateEntry
                    LongTemplateEntryStart "${" @ 171..173 trailing=[Whitespace " ", BlockComment "/* JOLT-TRIVIA:template-open */", Whitespace " "]
                    BinaryExpression
                      NameExpression
                        Identifier "count" @ 206..211 trailing=[Whitespace " "]
                      Plus "+" @ 212..213 trailing=[Whitespace " "]
                      LiteralExpression
                        IntegerLiteral "1" @ 214..215 trailing=[Whitespace " ", BlockComment "/* JOLT-TRIVIA:template-expression */", Whitespace " "]
                    LongTemplateEntryEnd "}" @ 254..255
              ClosingQuote "\"" @ 255..256
            PropertyBodyMemberList
          Statement
            ExpressionStatement
              JumpExpression
                ReturnKw "return" @ 261..267 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
                StringTemplateExpression
                  StringTemplateEntryList
                    StringTemplateEntry
                      OpenQuote "\"" @ 268..269
                    StringTemplateEntry
                      ShortTemplateEntryStart "$" @ 269..270
                    StringTemplateEntry
                      Identifier "simple" @ 270..276
                    StringTemplateEntry
                      RegularStringPart "; " @ 276..278
                    StringTemplateEntry
                      ShortTemplateEntryStart "$" @ 278..279
                    StringTemplateEntry
                      Identifier "nested" @ 279..285
                  ClosingQuote "\"" @ 285..286
            TerminatorList
        RBrace "}" @ 287..288 leading=[Newline "\n"]
  Eof "" @ 289..289 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
