crates/jolt_kotlin_syntax/tests/snapshots/corpus__trivia__type_parameters_and_where.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
package com.example.trivia

interface Source<T>
interface Sink<T>

class Pipe<
    /* JOLT-TRIVIA:type-param-leading */ T : Any,
    R /* JOLT-TRIVIA:type-param-name */ ,
> where
    T : Source<R> /* JOLT-TRIVIA:where-first */ ,
    T : Sink<R> /* JOLT-TRIVIA:where-second */

fun <T /* JOLT-TRIVIA:function-type-param */> echo(value: T): T where T : CharSequence = value

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    PackageHeader
      PackageKw "package" @ 0..7 trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentList
          Name
            Identifier "com" @ 8..11
          Dot "." @ 11..12
          Name
            Identifier "example" @ 12..19
          Dot "." @ 19..20
          Name
            Identifier "trivia" @ 20..26
      TerminatorList
    InterfaceDeclaration
      ModifierList
      ModifierList
      InterfaceKw "interface" @ 28..37 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      Name
        Identifier "Source" @ 38..44
      TypeParameterList
        Lt "<" @ 44..45
        TypeParameterSeparatedList
          TypeParameter
            ModifierList
            Name
              Identifier "T" @ 45..46
        Gt ">" @ 46..47
    InterfaceDeclaration
      ModifierList
      ModifierList
      InterfaceKw "interface" @ 48..57 leading=[Newline "\n"] trailing=[Whitespace " "]
      Name
        Identifier "Sink" @ 58..62
      TypeParameterList
        Lt "<" @ 62..63
        TypeParameterSeparatedList
          TypeParameter
            ModifierList
            Name
              Identifier "T" @ 63..64
        Gt ">" @ 64..65
    ClassDeclaration
      ModifierList
      ModifierList
      ClassKw "class" @ 67..72 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      Name
        Identifier "Pipe" @ 73..77
      TypeParameterList
        Lt "<" @ 77..78
        TypeParameterSeparatedList
          TypeParameter
            ModifierList
            Name
              Identifier "T" @ 120..121 leading=[Newline "\n", Whitespace "    ", BlockComment "/* JOLT-TRIVIA:type-param-leading */", Whitespace " "] trailing=[Whitespace " "]
            Colon ":" @ 122..123 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  UserTypeSegment
                    Identifier "Any" @ 124..127
          Comma "," @ 127..128
          TypeParameter
            ModifierList
            Name
              Identifier "R" @ 133..134 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " ", BlockComment "/* JOLT-TRIVIA:type-param-name */", Whitespace " "]
          Comma "," @ 169..170
        Gt ">" @ 171..172 leading=[Newline "\n"] trailing=[Whitespace " "]
      TypeConstraintList
        Identifier "where" @ 173..178
        TypeConstraintSeparatedList
          TypeConstraint
            Name
              Identifier "T" @ 183..184 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
            Colon ":" @ 185..186 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  UserTypeSegment
                    Identifier "Source" @ 187..193
                    TypeArgumentList
                      Lt "<" @ 193..194
                      TypeProjectionSeparatedList
                        TypeReference
                          UserType
                            UserTypeSegmentList
                              UserTypeSegment
                                Identifier "R" @ 194..195
                      Gt ">" @ 195..196 trailing=[Whitespace " ", BlockComment "/* JOLT-TRIVIA:where-first */", Whitespace " "]
          Comma "," @ 227..228
          TypeConstraint
            Name
              Identifier "T" @ 233..234 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
            Colon ":" @ 235..236 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  UserTypeSegment
                    Identifier "Sink" @ 237..241
                    TypeArgumentList
                      Lt "<" @ 241..242
                      TypeProjectionSeparatedList
                        TypeReference
                          UserType
                            UserTypeSegmentList
                              UserTypeSegment
                                Identifier "R" @ 242..243
                      Gt ">" @ 243..244 trailing=[Whitespace " ", BlockComment "/* JOLT-TRIVIA:where-second */"]
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 277..280 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      TypeParameterList
        Lt "<" @ 281..282
        TypeParameterSeparatedList
          TypeParameter
            ModifierList
            Name
              Identifier "T" @ 282..283 trailing=[Whitespace " ", BlockComment "/* JOLT-TRIVIA:function-type-param */"]
        Gt ">" @ 321..322 trailing=[Whitespace " "]
      ModifierList
      Name
        Identifier "echo" @ 323..327
      ValueParameterList
        LParen "(" @ 327..328
        ValueParameterSeparatedList
          ValueParameter
            ModifierList
            Name
              Identifier "value" @ 328..333
            Colon ":" @ 333..334 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  UserTypeSegment
                    Identifier "T" @ 335..336
        RParen ")" @ 336..337
      Colon ":" @ 337..338 trailing=[Whitespace " "]
      TypeReference
        UserType
          UserTypeSegmentList
            UserTypeSegment
              Identifier "T" @ 339..340 trailing=[Whitespace " "]
      TypeConstraintList
        Identifier "where" @ 341..346 trailing=[Whitespace " "]
        TypeConstraintSeparatedList
          TypeConstraint
            Name
              Identifier "T" @ 347..348 trailing=[Whitespace " "]
            Colon ":" @ 349..350 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  UserTypeSegment
                    Identifier "CharSequence" @ 351..363 trailing=[Whitespace " "]
      ExpressionBody
        Assign "=" @ 364..365 trailing=[Whitespace " "]
        NameExpression
          Identifier "value" @ 366..371
  Eof "" @ 372..372 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
